[package]
name = "nesdie"
version = "0.1.0"
authors = ["Austin Abell <austinabell8@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std SDK for NEAR protocol"
repository = "https://github.com/austinabell/nesdie"
edition = "2018"

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false, optional = true }

[features]
default = ["wee_alloc"]
panic-message = []
oom-handler = []

[profile.release]
panic = "abort"
lto = true
