[package]
name = "nesdie"
version = "0.2.0"
authors = ["Austin Abell <austinabell8@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std SDK for NEAR protocol"
repository = "https://github.com/austinabell/nesdie"
exclude = ["/examples/**", "/.vscode", "/.github", "/collections"]
edition = "2018"

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false, optional = true }
near-sys = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
near-vm-logic = "=4.0.0-pre.1"
near-primitives-core = "=0.4.0"

[features]
default = ["wee_alloc"]
std = []
panic-message = []
oom-handler = []

[profile.release]
panic = "abort"
lto = true

[workspace]
members = ["collections"]
exclude = ["examples/"]
