[package]
name = "contract-upgrade-tests"
version = "0.1.0"
authors = []
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
# -sdk = { path = "../../near-sdk" }
near-units = "0.2.0"
serde_json = "1.0"
test-case = "2.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = { version = "0.6.0", features = ["unstable"] }

[workspace]
members = ["upgrade-a", "upgrade-b"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"