[package]
name = "multisig"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
nesdie = { path = "../../", features = ["oom-handler"] }
nesdie-collections = { path = "../../collections", features = ["legacy"] }
borsh = { version = "0.9", default-features = false }
bs58 = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
miniserde = { version = "0.1.15", default-features = false }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
